--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -8,8 +8,8 @@ sky:
     password: 1234
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: LTAI5tAdQtSK4Z5EuTqFKRyS
-    access-key-secret: oSV3C2nQ4Cy9nSn0GIDCaNwWS6h3hK
+    access-key-id: key
+    access-key-secret: key
     bucket-name: baomido
   redis:
     host: localhost
